fixed some gaps and images

--- a/packages/react/src/components/Checkbox/Checkbox.css
+++ b/packages/react/src/components/Checkbox/Checkbox.css
@@ -1,6 +1,7 @@
 @import url('../../styles/tokens/checkbox.css');
 
 .hearth-Checkbox {
+  gap: var(--h-checkbox-gap);
   /* we do this so that the gap between the checkbox & label is clickable */
   .hearth-Label {
     position: relative;
